@@ -55,3 +55,4 @@
 2024-12-09: Add considerPowerControl query parameter in simulation endpoint
 2025-03-12: Add simulation for yield-losses endpoint
 2025-04-15: Extend technical data endpoint to return systemConfigurations models
+2025-04-21: Add site-access for cmms endpoint
